--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "客層判別システム",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/rikyuusima/yayoifes_analyzer#readme",
   "dependencies": {
-    "mysql": "^2.15.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "joi": "^13.0.1",
+    "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
+    "request": "^2.83.0"
   }
 }
