--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.2",
     "express": "~4.16.2",
     "joi": "^13.0.1",
+    "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "mysql": "~2.15.0",
     "request": "^2.83.0"
