--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.16.2",
     "joi": "^13.0.1",
     "moment": "^2.19.1",
+    "moment-timezone": "^0.5.14",
     "morgan": "^1.9.0",
     "mysql": "~2.15.0",
     "request": "^2.83.0"
